LayoutTest media/airplay-target-availability.html is flaky https://bugs.webkit.org/show_bug.cgi?id=153100 <rdar://problem/24346796>

Reviewed by Daniel Bates.

Source/WebCore:

No new tests, media/airplay-target-availability.html was updated

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::clientStateDidChange): Schedule a configuration scan if
  any of the config flags have changed.
(WebCore::WebMediaSessionManager::configurePlaybackTargetMonitoring): Update logging.

LayoutTests:

* media/airplay-target-availability-expected.txt:
* media/airplay-target-availability.html:


Canonical link: https://commits.webkit.org/171546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195592 268f45cc-cd09-0410-ab3c-d52691b4dbfc